# osu-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-deb.yml
src/: config.rs  db.rs  git.rs  main.rs  scrape.rs  web.rs
src/osuapi/: beatmaps.rs  mod.rs  models.rs
static/: main.css
