[package]
name = "osu-tools"
version = "0.1.0"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"
license = "GPLv3"

[dependencies]
actix-web = "4.0.0-beta.4"
anyhow = "1.0.38"
chrono = "0.4.19"
chrono-humanize = "0.1.2"
futures = "0.3.13"
git2 = "0.13.17"
log = "0.4.14"
packer = "0.5.3"
parking_lot = "0.11.1"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_repr = "0.1.6"
sled = "0.34.6"
stderrlog = "0.5.1"
structopt = "0.3.21"
tempfile = "3.2.0"
tokio = { version = "1.3.0", features = ["full"] }
toml = "0.5.8"
zip = "0.5.11"

[package.metadata.deb]
depends = "$auto"
